# learn_cmake

2_add_library/: CMakeLists.txt  README.md  hello.h  main.cpp
3_add_subdir_and_target_interface/: CMakeLists.txt  README.md  msvs_17_2022.cmd
3_add_subdir_and_target_interface/hello_exe/: CMakeLists.txt  main.cpp
3_add_subdir_and_target_interface/say_hello/: CMakeLists.txt
4_cmake_option/: CMakeLists.txt  README.md
4_cmake_option/app/: CMakeLists.txt  main.cpp
hello_exe/: main.cpp
say_hello/: CMakeLists.txt
say_hello/src/say_hello/: hello.cpp
